--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -14,7 +14,7 @@
                 <% if (!category || categories.includes(category) && listing.category === category) { %>
                     
                     <div class="col-md-4 mb-4" id="chitr">
-                        <div class="card h-100">
+                        <div class="card h-100" id="chitr1">
                             <a href="/listings/<%= listing._id %>" class="click">
                                 <img src="<%= listing.image.url %>" class="card-img-top" id="pic" alt="...">
                                 
