--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/bootstrap") %>
 
-<div class="offset-2">
+<div class="offset-2" id="new_form">
     <h1>Create a new listing</h1>
     
     <form action="/listings/create" method="POST" novalidate class="row g-3 needs-validation" enctype="multipart/form-data">
