--- a/public/style.css
+++ b/public/style.css
@@ -39,11 +39,7 @@ footer {
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
 }
-@media (max-width : 767px){
- .navbar-toggler{
-display: none;
-}
-}
+
 .navbar-brand {
   color: red;
   font-size: 2rem;
@@ -217,8 +213,7 @@ footer .info a:hover {
   width: 200px;
   margin-right: 10px;
 margin-left: -5px;
-/* padding-left:5px ;
-padding-right:5px; */
+
 }
 #sig{
 font-size:20px;   
@@ -248,8 +243,8 @@ a{
   
  }
  #right_nav{
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
+  padding: 0px 40px 0px 0px;
+  margin: -30px 40px 0px 0px;
  }
  #bo{
   border: transparent solid black;
@@ -257,7 +252,8 @@ a{
   border-radius: 20px;
   width: 230px;
   height: 30px;
-  margin-right: 30px;
+  margin-right: 5%;
+  margin-top: -10%;
   padding-bottom:45px ;
   padding-top: -2px;
   /* margin-top : 5px; */
@@ -288,26 +284,28 @@ color: #3C3C3C !important;
 }
 #LS_box{
   margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 20px;
   text-align: center;
 }
 #ls_box{
-  margin-right: 30px;
-  margin-top: 4px;
+  margin-right: 20px;
+  margin-top: -50%;
 text-align: center;
 border: 2px solid red;
-border-radius: 20px;
-width: 40px;
-height: 40px;
+border-radius: 40px;
+width: 50px;
+height: 50px;
 background-color: white;
 padding-bottom: 0px;
 
 }
-
+#db{
+  margin-top: 5%;
+}
 
 #pro{
-scale: 150%;
-margin-top: 8px;
+scale: 175%;
+margin-top: 12px;
 color :red;
 cursor: pointer
 }
@@ -368,11 +366,19 @@ padding-bottom: 10px
   margin-right: 140px;
   position: fixed;
 }
+#line4{
+  border-top: 1px solid #d1d1d1;
+  width: 100%; /* Adjust the width as needed */
+  margin-top: 66px ; 
+  margin-right: 140px;
+  position: fixed;
+}
 #compass{
   scale: 115%;
 }
 #lo{
   color: red !important;
+  margin-right: 30%;
 }
 #pages{
   padding: 0px 0px 0px 0px  ;
@@ -395,13 +401,15 @@ padding-bottom: 10px
   opacity: 1;
 }
 #sbar{
-margin-left: 200px;
+/* margin-left: 100%; */
+margin-right: 16%;
   border: 1px solid transparent;
    box-shadow:0px 1px 1px 1px rgb(199, 198, 198) ;
   border-radius: 20px;
-  width:500px;
+  width:690px;
   padding-top: 4px;
   padding-left: 10px;
+ 
   height: 50px;
 }
 #sbar:hover{
@@ -412,17 +420,17 @@ margin-left: 200px;
 outline: none !important;
 border:none !important;
   width: 450px;  
-  padding-right: -160px;
-  margin-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
 }
 #sbtn{
   background-color: #E41C57;
   border:2px solid white;
   border-radius: 40px;
-  margin-right:- 40px;
+  margin-right:- 50%;
   height: 40px;
   width: 50px;
-  padding-right: -6px;
+  padding-right: -10px;
 }
 #fil_btn{
   background-color: white;
@@ -482,17 +490,142 @@ width: 50px !important;
 #alrev:hover{
 text-decoration: underline;
 }
+@media  (max-width: 768px){
+  .navbar-toggler{
+    visibility:hidden;
+  }
+}
 
-@media(max-width:1115px){
-  #right_nav{
-    visibility: collapse;
-  }
-}@media(max-width:654px){
-  footer .con .info{
-    visibility: collapse ;
-  }
-  footer .con .social{
-    visibility: collapse ;
+@media (max-width:340px){
+ 
+  #m_navbar{
+width: 500px;
+background-color: white;
+scale:100%;
 
   }
+#compass,#lo{
+scale: 80%;
+}
+#lo{
+  padding-left: -60%;
+  padding-right: 70%;
+  margin-top: -12%;
+
+}
+#LS_box{
+  margin-top: -24%;
+  margin-left: 80%;
+  scale: 60%;
+  padding-left: 50px;
+}
+#line{
+  scale:40%;
+  margin-top:24%;
+  margin-left: -10%;
+  background-color: white;
+  width: 200px;
+  position: fixed;
+}
+#pages{
+  overflow-y: hidden;
+
+  margin-top: -8.5%;
+}
+
+#line4{
+  margin-top: 32%;
+  margin-left: 595%;
+}
+
+#nav_icon{
+  padding-left: 15px;
+  padding-right: 20px;
+  margin-right: -1%;
+}
+#sbar{
+  scale: 50%;
+  margin-right: -1%;
+  padding-right: -30%;
+}
+#chitr{
+  scale:70%;
+  width: 100%;
+  height: 280px;
+padding:0px 0px 50px 0px ;
+margin: 0px 0px 0px 0px ;
+}
+#chitr1{
+  position: relative;
+
+  padding-bottom: 10px;
+  margin-top: -50px;
+  margin-left: 25%;
+  gap: -1;
+}
+#right_nav{
+  padding: 0px 0px 0px 0px ;
+  margin: 0px 0px 0px 0px ;
+}
+#bo{
+  scale: 40%;
+margin-top: -76%;
+margin-left: 20%;
+}
+footer{
+  scale: 60%;
+  width: 166%;
+  margin-left: -187px;
+  margin-bottom: -5%;
+  height: 10%;
+}
+#i_mcard
+{
+  margin: -40% 0% 0% 0%;
+  padding: 0px 0px 0px 0px;
+  scale: 50%;
+  
+}
+#i_scard {
+  width: 100%;
+}
+#photo{
+  height: 400px;
+  width: 600px;
+}
+#review{
+  width: 70%;
+}
+#map{
+  height: 40%;
+  width: 180%;
+}
+#new_form{
+  scale: 60%;
+ margin-top: -40%;
+ margin-right: 80%;
+ width: 190%;
+}
+#sig{
+  scale: 65%;
+  margin-right: 50%;
+  margin-top: -30%;
+  width: 200%;
+}
+#flash{
+  scale: 50%;
+  width: 100%;
+}
+#db{
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+}
+#op{
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+}
+#le_nav{
+  scale: 50%;
+  margin-right: -20%;
+}
 }
